resolved scrollbar display issues when opening and closing search drawer

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -6,13 +6,18 @@
 }
 body {
   font-family: 'Adelle Sans' !important;
+  /* width: 100% !important; */
 }
 
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  overflow-y: auto !important;
 }
+
+
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
